feat: update project

--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Discover</title>
 
-        <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon/jpg">
+        <!-- CSS -->
+        <link rel="stylesheet" href="./styles/style.css">
+
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="./assets/me.png" type="image/x-icon/jpg/png">
     </head>
     <body>
-        
+        <div id="container">
+            <header id="profile">
+                <img src="./assets/me.png" alt="photo_profile">
+                <p> @DevSaLLein </p>
+            </header>
+        </div>
     </body>
 </html>
