feat: update project with buttons links

--- a/index.html
+++ b/index.html
@@ -17,6 +17,49 @@
                 <img src="./assets/me.png" alt="photo_profile">
                 <p> @DevSaLLein </p>
             </header>
+            <main id="main">
+                <ul id="buttons__container">
+                    <li type="button" class="button">
+                        <a href="https://devsallein.github.io/Portfolio" target="_blank">
+                            Inscreva-se no NLW
+                        </a>
+                    </li>
+                    <li type="button" class="button">
+                        <a href="https://devsallein.github.io/Portfolio" target="_blank">
+                            Baixe o meu e-book
+                        </a>
+                    </li>
+                    <li type="button" class="button">
+                        <a href="https://devsallein.github.io/Portfolio" target="_blank">
+                            Veja o meu portfolio
+                        </a>
+                    </li>
+                    <li type="button" class="button">
+                        <a href="https://devsallein.github.io/Portfolio" target="_blank">
+                            Conheça o Explorer
+                        </a>
+                    </li>
+                </ul>
+
+                <section id="socialMedias">
+                    <a href="https://github.com/DevSaLLein" class="socialMedia__container" target="_blank">
+                        <img src="./styles/images/github__icon.png" alt="github" class="socialMedia__img">
+                    </a>
+
+                    <a href="https://www.instagram.com/devsallein" class="socialMedia__container" target="_blank">
+                        <img src="./styles/images/instagram__icon.png" alt="instagram" class="socialMedia__img">
+                    </a>
+
+                    <a href="" class="socialMedia__container" target="_blank">
+                        <img src="./styles/images/youtube__icon.png" alt="youtube" class="socialMedia__img">
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/devsallein" class="socialMedia__container" target="_blank">
+                        <img src="./styles/images/linkedin__icon.png" alt="linkedin" class="socialMedia__img">
+                    </a>
+                </section>
+            </main>
+            <footer id="footer">Feito com carinho por DevSaLLein</footer>
         </div>
     </body>
 </html>
