--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" id="root" class="dark">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,12 @@
             <header id="profile">
                 <img src="./assets/me.png" alt="photo_profile">
                 <p> @DevSaLLein </p>
+
+                <button id="switchMode" type="button">
+                    <section class="switchIcon">
+                        <img src="./assets/moon-stars.svg" alt="">
+                    </section>
+                </button>
             </header>
             <main id="main">
                 <ul id="buttons__container">
@@ -43,23 +49,27 @@
 
                 <section id="socialMedias">
                     <a href="https://github.com/DevSaLLein" class="socialMedia__container" target="_blank">
-                        <img src="./styles/images/github__icon.png" alt="github" class="socialMedia__img">
+                        <ion-icon name="logo-github" class="socialMedia__img"></ion-icon>                
                     </a>
 
                     <a href="https://www.instagram.com/devsallein" class="socialMedia__container" target="_blank">
-                        <img src="./styles/images/instagram__icon.png" alt="instagram" class="socialMedia__img">
+                        <ion-icon name="logo-instagram" class="socialMedia__img"></ion-icon>
                     </a>
 
                     <a href="" class="socialMedia__container" target="_blank">
-                        <img src="./styles/images/youtube__icon.png" alt="youtube" class="socialMedia__img">
+                        <ion-icon name="logo-youtube" class="socialMedia__img"></ion-icon>
                     </a>
 
                     <a href="https://www.linkedin.com/in/devsallein" class="socialMedia__container" target="_blank">
-                        <img src="./styles/images/linkedin__icon.png" alt="linkedin" class="socialMedia__img">
+                        <ion-icon name="logo-linkedin" class="socialMedia__img"></ion-icon>
                     </a>
                 </section>
             </main>
-            <footer id="footer">Feito com carinho por DevSaLLein</footer>
+            <footer id="footer">Feito com carinho por @DevSaLLein</footer>
+
+            <script src="./script/script.js" DEFER></script>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         </div>
     </body>
 </html>
