feat: HTML e CSS finished

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <header id="profile">
                 <img src="./assets/me.png" alt="photo_profile">
                 <p> @DevSaLLein </p>
-
-                <button id="switchMode" type="button">
-                    <section class="switchIcon">
-                        <img src="./assets/moon-stars.svg" alt="">
-                    </section>
-                </button>
             </header>
+            <div id="switch">
+                <button type="button"></button>
+                <span>
+                    
+                </span>
+            </div>
             <main id="main">
                 <ul id="buttons__container">
                     <li type="button" class="button">
